# caml-in-the-capital.github.io

./: .gitignore  LICENSE  README.md  caml_in_the_capital.opam  dune-project  flake.nix
.github/workflows/: deploy-pages.yml
content/meetings/2026-02-26/: _index.md  macocaml.md  ortac.md
css/: style.css
nix/: caml-in-the-capital.nix  overlay.nix  www.nix
templates/: index.html  layout.html  talk.html
